--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.2.5",
     "next-auth": "^4.13.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
